# data_collection_and_prepare

./: .coveragerc  .gitignore  Makefile  NOTES.md  pyproject.toml
data_collection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_collection/riksdagens_open_data/: download_prot.sh  rdo_client.py
pipelines/sparv-pipeline-v4/: Dockerfile  INSTALL.md  Makefile  sparv-in-yearly-chunks.sh  sparv4  sparvit-in-chunks.sh
pipelines/sparv-pipeline-v4/scripts/: install-base.sh  install-cwb.sh  install-hfst-swener.sh  install-hunpos.sh  install-maltparser.sh  install-sparv-wsd.sh  install-sparv.sh  install-stanford-parser.sh
scripts/kb_labb/: download_content_json.py  extract_json_text.py
scripts/prepare_riksdagens_protocoll/kb_labb/: download_protocol_content_json.py
scripts/prepare_riksdagens_protokoll/: merge_kb-labb-riksdagens-open-data.sh
scripts/prepare_riksdagens_protokoll/riksdagens_open_data/: download_from_riksdagens_open_data.sh
scripts/riksdagens_protokoll/: fetch-gdrive.sh
scripts/riksdagens_protokoll/step.1-compile_corpus/: merge_kb-labb-rod-20200915.sh  merge_kb-labb-rod-20201005.sh
scripts/riksdagens_protokoll/step.1-compile_corpus/kb_labb/: download_protocol_content_json.py
scripts/riksdagens_protokoll/step.1-compile_corpus/riksdagens_open_data/: rename_protocol_filenames.py
scripts/riksdagens_protokoll/step.1-compile_corpus/riksdagens_open_data/vault/: rename-text-files.py
scripts/riksdagens_protokoll/step.2-annotate_corpus/: config-template.yaml  config.yaml  run-all.sh  sparv-in-yearly-chunks.sh  xyz.sh
scripts/riksdagens_protokoll/utils/: copy_zip_archive.py
scripts/utils/: extract_altoxml_text.py
src/kb_labb/: download.py
src/prepare_riksdagens_protocoll/: rename_text_files.py
src/riksdagens_open_data/: WIP_rdo_client.py
src/utility/: __init__.py  altoxml_parser.py  utility.py
tests/: test_data_collection.py
