[tool.poetry]
name = "westac_data"
version = "0.1.0"
description = ""
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
xml2dict = "^0.2.2"
pandas = "^1.1.2"
ipykernel = "^5.3.4"
click = "^7.1.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Flake8 = "^3.8.3"
black = "^20.8b1"
rope = "^0.17.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
