[tool.poetry]
name = "humlab-westac-data"
version = "2021.1.1"
description = ""
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
packages = [
    { include = "src" },
    { include = "notebooks" },
    { include = "pipelines" },
    { include = "scripts" },
]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Software Development',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/humlab/penelope"
repository = "https://github.com/humlab/penelope"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
xml2dict = "^0.2.2"
pandas = "^1.1.2"
ipykernel = "^5.3.4"
click = "^7.1.2"
python-dotenv = "^0.14.0"
xmltodict = "^0.12.0"
gdown = "^3.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
Flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^5.2"
rope = "^0.17.0"
flake8-black = "^0.2.1"
flake8-pytest-style = "^1.3.0"
isort = "^5.7.0"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
pylint = "^2.7.1"
dephell = "^0.8.3"

[tool.poetry.scripts]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
     "-rfE", # Show extra info as specified by chars: (f)ailed, (E)rror, (s)kipped, (x)failed, (X)passed, (p)assed, (P)assed with output, (a)ll except passed (p/P), or (A)ll
     "-q",
     "-s",
     "-n4",
]
log_cli = "False"
testpaths = [
    "tests",
]
# norecursedirs = ['penelope', 'dist', 'docs', 'htmlcov', 'tmp', 'coverage', '.git', 'data', 'output', 'deprecated', '__pycache__', 'tmp', 'test-data']
python_files = "*_test.py"
python_functions = "test_*"
filterwarnings = [
#   "ignore",
  "ignore::_pytest.warning_types.PytestCollectionWarning",
  "ignore::DeprecationWarning"
  # "ignore::PendingDeprecationWarning:",
]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetry", path = "pyproject.toml"}

[tool.black]
line-length = 120
target-version = ["py38"]
skip-string-normalization = true
# include = '\.pyi?$'
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = [ "penelope", "tests" ]


[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["penelope"]
branch = true
omit = [
    "**/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]
show_missing = true
sort = "Name"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
